Ading a new dropdown for selecting filter in the Generate Report View 	modified:   src/main/java/io/jenkins/plugins/ReqtifyData.java 	modified:   src/main/java/io/jenkins/plugins/ReqtifyGenerateReport.java 	modified:   src/main/java/io/jenkins/plugins/Utils.java 	modified:   src/main/resources/io/jenkins/plugins/Messages.properties 	modified:   src/main/resources/io/jenkins/plugins/ReqtifyGenerateReport/config.jelly 	modified:   src/main/resources/io/jenkins/plugins/ReqtifyGenerateReport/help.html 	new file:   src/main/webapp/help/ReqtifyGenerateReport/help-filter.html 	new file:   src/main/webapp/help/ReqtifyGenerateReport/help-filter_fr.html 	new file:   src/main/webapp/help/ReqtifyGenerateReport/help-filter_ja.html 	new file:   src/main/webapp/help/ReqtifyGenerateReport/help-filter_zh.html

--- a/src/main/resources/io/jenkins/plugins/ReqtifyGenerateReport/help.html
+++ b/src/main/resources/io/jenkins/plugins/ReqtifyGenerateReport/help.html
@@ -5,5 +5,6 @@
   	<li>The name of report</li>
   	<li>The model of report</li>
   	<li>The template of report</li>
+      <li>The project filter</li>
   </ul>
 </div>
